<resources>
    <string name="app_name">Okitoki</string>

    <!-- hints -->
    <string name="hint_email">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_username">닉네임</string>

    <!-- buttons -->
    <string name="button_login">로그인</string>
    <string name="button_signup">회원가입</string>
    <string name="button_send">전송</string>

    <!-- remote config -->
    <string name="remote_config_color">splash_background</string>

    <!-- textviews -->
    <string name="textview_name">이름</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
